--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 -->
 <html>
 	<head>
+	<!-- Font import -->
+		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
 		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -19,10 +21,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Home</a></li>
+							<li><a href="#one">Work</a></li>
+							<li><a href="#two">About Us</a></li>
+							<li><a href="#three">Get Started</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,9 +36,9 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>LocalLy</h1>
+							<p>Providing you with a playlist created specifically for you and your needs<br />
+							</p> By: Henna
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
