Finished "Home" Section
added logo and fixed alignments

--- a/index.html
+++ b/index.html
@@ -35,13 +35,21 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<img src = "images/logoCentered.png" alt="" height="250px" width="250px"/>
 						<div class="inner">
+							<br/>
 							<h1>LocalLy</h1>
-							<p>Providing you with a playlist created specifically for you and your needs<br />
-							</p> By: Henna
+							<p class = "aboutShort">Creating custom playlists to fit your personal needs.
+							</p>
+						  </p>
 							<ul class="actions">
+							<div class="b1">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
+							</div>
 							</ul>
+							<p class = "nameOurs">
+							By: Henna
+							<br/>
 						</div>
 					</section>
 
