--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/ImageSquare.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Most Popular Songs for College Students</h2>
+									<p>A playlist created for college students. Entertain with the most popular hits on campus!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">Play</a></li>
 									</ul>
 								</div>
 							</div>
@@ -71,10 +71,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Girl Power Go-to's</h2>
+									<p>A playlist of songs that represent girl power and embrace femeninity.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">Go Girl!</a></li>
 									</ul>
 								</div>
 							</div>
@@ -83,10 +83,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>New Artists: 2020</h2>
+									<p>Tiered of listening to the same songs? Find you new favorite artist in this playlist</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="generic.html" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
@@ -96,38 +96,57 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>About Us</h2>
+							<p>LocalLy is designed to provide playlists that support both local artist and businesses, along with individuals. Data processing algorithms work to filter and build playlist to fit our consumers needs. Keep reading to see some examples of what we do.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Supporting Local Artist</h3>
+									<p>One of our most revolutionary features is the ability to enter in your hometown and
+										 have a playlist made. The resulting songs are by musicians from your hometown or from an area
+									 	 near your hometown.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Supporting Businesses</h3>
+									<p>Music plays a large role in businesses.
+										Whether its a bar aiming to play music that caters to the age group of its croud,
+									a fancy store playing rich sounds that fit the brand, or your Uber driver playing music they think you will like.
+									However, business owners may have trouble finding a playlist to suit their needs. We not only provide one for free,
+									but our content is backed by data.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Serving Humanity</h3>
+									<p>For many people, music serves a purpose beyond entertainment.
+										For some, they use it to concentrate on their work. Others may use it
+										to provide courage and confidence before facing a stressful situation.
+										Music does a lot, and we want to provide it in an easy to use and
+										enjoyable format. Our mission is simply to make life easier and more enjoyable. </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Serving Individuals</h3>
+									<p>Maybe you don't find yourself enjoying the popular music played on the radio,
+									so you are hoping to have a playlist created to fit your personal music tastes. Perhaps, you are
+									throwing a party for an elder family member and wanting to find a playlist most enjoyable to their age group.
+									Or, frankly, you just want to find new music to enjoy. We can help you achieve whatever your goal may be.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Positive</h3>
+									<p>We desire to provide music that supports humanity. With playlists providing songs
+										that lift you up. It can be an upbeat pick me up playlist, songs that embrace
+										men showing/expressing emotion, or one that reminds you of home. We have all sorts of
+										unique "positive" playlits.
+									</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Corona Child Care Support</h3>
+									<p>Due to recent events, a lot of parents have been struggling balancing personal time,
+									child care, and work due to lockdowns and social distancing. We feel for you. We are hoping
+								to lessen your load by helping </p>
 								</section>
 							</div>
 							<ul class="actions">
