HTML changes to show where to put playlits

--- a/index.html
+++ b/index.html
@@ -143,14 +143,18 @@
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Corona Child Care Support</h3>
+									<h3>Child Care Support</h3>
 									<p>Due to recent events, a lot of parents have been struggling balancing personal time,
-									child care, and work due to lockdowns and social distancing. We feel for you. We are hoping
-								to lessen your load by helping </p>
+									child care, and work due to lockdowns and social distancing. We feel for you. Hence, Disney
+									karaoke! Set your kids up outside in the beautiful spring weather, give them a "microphone"
+									(aka a spoon or hairbrish), and we will provide songs and lyrics for them to preform. In
+									the meantime parents take time to yourself inside and relax!
+
+							</p>
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="generic.html" class="button">Get Started</a></li>
 							</ul>
 						</div>
 					</section>
@@ -158,7 +162,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
+							<h2>Build your playlist</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
