Finished Writing draft text for all
updated all text

--- a/index.html
+++ b/index.html
@@ -163,54 +163,52 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Build your playlist</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Enter in your keys to generate you playlist! Add them in the format of "Filter: Desired Effect" for multiple sepperate by either "and" or "or".
+							Futhermore,	"and" seperated filters give songs that match all specifications while "or" gives songs that match at least one of the specifications <br/>
+							Example: <br/>
+							City: Los Angeles and Genre: Alternative and Age: 20-30
+							<br/>
+							This provides a playlist with alternative songs that are popular
+							 with people aged 20-30 and whose artist is from Los Angeles.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
 											</div>
 											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
 											</div>
 											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
+												<label for="message">Search filters to build playlist</label>
+												<textarea name="message" id="message" rows="2"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="" class="button submit">Search</a></li>
 										</ul>
 									</form>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<h3>Avaliable Filters</h3>
+											<span>City: allows users to input city to get songs from local artists</span>
 										</li>
 										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<span>Genre: type of song</span>
 										</li>
 										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>Age: specify what age group this song is most popular with</span>
 										</li>
 										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
+											<span>Music-Age: allows to specify a year song was published</span>
+										</li>
+										<li>
+											<span>Popularity: adds songs that are popular</span>
+										</li>
+										<li>
+											<span>Keys: custom adjitives to descipe songs such as
+											uplifting, GirlPower, Disney, and many more! </span>
 										</li>
 									</ul>
 								</section>
@@ -224,7 +222,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; LocalLy by Henna</li>
 					</ul>
 				</div>
 			</footer>
