--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<h2>Most Popular Songs for College Students</h2>
 									<p>A playlist created for college students. Entertain with the most popular hits on campus!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Play</a></li>
+										<li><a href="generic1.html" class="button">Play</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,7 +74,7 @@
 									<h2>Girl Power Go-to's</h2>
 									<p>A playlist of songs that represent girl power and embrace femeninity.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Go Girl!</a></li>
+										<li><a href="generic2.html" class="button">Go Girl!</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 									<h2>New Artists: 2020</h2>
 									<p>Tiered of listening to the same songs? Find you new favorite artist in this playlist</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Check it out</a></li>
+										<li><a href="generic3.html" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
