--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
 							<p>LocalLy is designed to provide playlists that support both local artist and businesses, along with individuals. Data processing algorithms work to filter and build playlist to fit our consumers needs. Keep reading to see some examples of what we do.</p>
 							<div class="features">
 								<section>
-									<span class="icon solid major fa-code"></span>
+									<span class="icon solid major fas fa-home"></span>
 									<h3>Supporting Local Artist</h3>
 									<p>One of our most revolutionary features is the ability to enter in your hometown and
 										 have a playlist made. The resulting songs are by musicians from your hometown or from an area
 									 	 near your hometown.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-lock"></span>
+									<span class="icon solid major fa-handshake"></span>
 									<h3>Supporting Businesses</h3>
 									<p>Music plays a large role in businesses.
 										Whether its a bar aiming to play music that caters to the age group of its croud,
@@ -116,7 +116,7 @@
 									but our content is backed by data.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-cog"></span>
+									<span class="icon solid major fa-heart"></span>
 									<h3>Serving Humanity</h3>
 									<p>For many people, music serves a purpose beyond entertainment.
 										For some, they use it to concentrate on their work. Others may use it
@@ -125,7 +125,7 @@
 										enjoyable format. Our mission is simply to make life easier and more enjoyable. </p>
 								</section>
 								<section>
-									<span class="icon solid major fa-desktop"></span>
+									<span class="icon solid major fa-female"></span>
 									<h3>Serving Individuals</h3>
 									<p>Maybe you don't find yourself enjoying the popular music played on the radio,
 									so you are hoping to have a playlist created to fit your personal music tastes. Perhaps, you are
@@ -133,7 +133,7 @@
 									Or, frankly, you just want to find new music to enjoy. We can help you achieve whatever your goal may be.</p>
 								</section>
 								<section>
-									<span class="icon solid major fa-link"></span>
+									<span class="icon solid major fa-hand-holding-heart"></i>"></span>
 									<h3>Positive</h3>
 									<p>We desire to provide music that supports humanity. With playlists providing songs
 										that lift you up. It can be an upbeat pick me up playlist, songs that embrace
@@ -142,7 +142,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-gem"></span>
+									<span class="icon solid major fa-baby"></span>
 									<h3>Child Care Support</h3>
 									<p>Due to recent events, a lot of parents have been struggling balancing personal time,
 									child care, and work due to lockdowns and social distancing. We feel for you. Hence, Disney
