HTML edits on generic pages 1-3

--- a/generic3.html
+++ b/generic3.html
@@ -18,12 +18,11 @@
   <body class="is-preload">
     <!-- Header -->
     <header id="header">
-      <a href="index.html" class="title">Hyperspace</a>
+      <a href="index.html" class="title">New Music Playlist</a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="generic.html" class="active">Generic</a></li>
-          <li><a href="elements.html">Elements</a></li>
+          <li><a href="generic.html" class="active">Playlist</a></li>
         </ul>
       </nav>
     </header>
@@ -44,22 +43,7 @@
           ></iframe>
           <br />
           <p>
-            Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-            mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor
-            sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet,
-            fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit.
-            Donec urna ex, lacinia in purus ac, pretium pulvinar mauris.
-            Curabitur sapien risus, commodo eget turpis at, elementum convallis
-            elit. Pellentesque enim turpis, hendrerit tristique.
-          </p>
-          <p>
-            Interdum et malesuada fames ac ante ipsum primis in faucibus.
-            Pellentesque venenatis dolor imperdiet dolor mattis sagittis.
-            Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-            Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien
-            risus, commodo eget turpis at, elementum convallis elit.
-            Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.
+            Thank you for using LocalLy. Enjoy your music!
           </p>
         </div>
       </section>
@@ -69,8 +53,7 @@
     <footer id="footer" class="wrapper alt">
       <div class="inner">
         <ul class="menu">
-          <li>&copy; Untitled. All rights reserved.</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+          <li>&copy; LocalLy by Henna</li>
         </ul>
       </div>
     </footer>
