--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<h2>New Artists: 2020</h2>
 									<p>Tiered of listening to the same songs? Find you new favorite artist in this playlist</p>
 									<ul class="actions">
-										<li><a href="https://culturecollide.com/20-austin-bands-watch-2018/" class="button">Check it out</a></li>
+										<li><a href="generic3.html" class="button">Check it out</a></li>
 									</ul>
 								</div>
 							</div>
