--- a/generic3.html
+++ b/generic3.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Generic - Hyperspace by HTML5 UP</title>
+    <title>Your Playlist</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
