Fixed Last Bit of CSS

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Get Started</a></li>
+								<li><a href="#three" class="button">Get Started</a></li>
 							</ul>
 						</div>
 					</section>
