--- a/generic4.html
+++ b/generic4.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="generic.html" class="active">Playlist</a></li>
+          <li><a href = "generic4.html" class="active">Playlist</a></li>
         </ul>
       </nav>
     </header>
