--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Search</a></li>
+											<li><a href="generic4.html" class="button">Search</a></li>
 										</ul>
 									</form>
 								</section>
