--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<img src = "images/logoCentered.png" alt="" height="250px" width="250px"/>
+						<img src = "images/LogoCentered.png" alt="" height="250px" width="250px"/>
 						<div class="inner">
 							<br/>
 							<h1>LocalLy</h1>
@@ -80,7 +80,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/rocord.png" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/Rocord.png" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>New Artists: 2020</h2>
